--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,11 @@
     </div>
   </div>
   <div class="main-content">
+    <!-- {{ authenticated }} -->
     <router-outlet />
   </div>
 </div>
 <ng-template #loginTemplate>
+  <!-- {{ authenticated }} -->
   <router-outlet />
 </ng-template>
