--- a/src/app/views/category/customer/customer.component.html
+++ b/src/app/views/category/customer/customer.component.html
@@ -4,26 +4,42 @@
   <p>Customer data from Subur Database</p>
 
   <div class="d-flex flex-row align-items-center mb-2">
-    <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
+    <p-button
+      label="Load Data"
+      (onClick)="loadButtonEvent()"
+      severity="success"
+      class="me-2"></p-button>
     <p-toast></p-toast>
     <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
     <p-button label="Submit" (onClick)="confirmDialog()" [disabled]="buttonDisabled"></p-button>
+  </div>
+
+  <div class="d-flex flex-row align-items-center mb-2">
+    <p-inputSwitch
+      [(ngModel)]="useCheckbox"
+      (onChange)="checkBoxChange()"
+      ariaLabelledBy="chckbox"
+      class="d-flex"></p-inputSwitch>
+    <label class="ms-2" id="chckbox">Use Checkbox?</label>
   </div>
 
   <p-table
     [loading]="loading"
     [value]="dataSource"
     [(selection)]="selectedData"
-    (onHeaderCheckboxToggle)="selectAllChange()"
-    (selectAllChange)="selectAllChange()"
+    (selectAllChange)="selectAllChange($event)"
     (selectionChange)="selectChange()"
+    [selectAll]="checkAll"
     dataKey="code"
     [paginator]="true"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    (onPage)="onPageChange($event)"
-    [rows]="10"
+    [lazy]="true"
+    (onLazyLoad)="onLazyLoad($event)"
+    [totalRecords]="totalRecords"
+    [(rows)]="pageSize"
+    (onPage)="onPageSizeChange($event)"
     [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
     <ng-template pTemplate="header">
       <tr>
@@ -31,8 +47,7 @@
           <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
         </th>
         <th>Code</th>
-        <th>Description</th>
-        <th>Group Type</th>
+        <th>Name</th>
         <th>Salt</th>
         <th>PIN</th>
         <th>Email</th>
@@ -46,6 +61,23 @@
         <th>Fees Rokok</th>
         <th>Fees non Rokok</th>
         <th style="min-width: 150px">Salesman NIK</th>
+        <th>Balance</th>
+        <th>Point Reward</th>
+        <th>PIC</th>
+        <th>Phone</th>
+        <th>Fax</th>
+        <th style="max-width: 160px">Mobile</th>
+        <th>Area</th>
+        <th>Adresses</th>
+        <th>BP Group</th>
+        <th>Credit Limit</th>
+        <th>Tax Count</th>
+        <th>Overall Point Reward</th>
+        <th>Latitude</th>
+        <th>Longitude</th>
+        <th>Accuracy</th>
+        <th>Birth Date</th>
+        <th>Transport Type</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-customer>
@@ -54,21 +86,37 @@
           <p-tableCheckbox [value]="customer"></p-tableCheckbox>
         </td>
         <td>{{ customer.code }}</td>
-        <td>{{ customer.description }}</td>
-        <td>{{ customer.groupType }}</td>
+        <td>{{ customer.name }}</td>
         <td>{{ customer.salt }}</td>
-        <td>{{ customer.pIN }}</td>
+        <td>{{ customer.pin }}</td>
         <td>{{ customer.emailAddress }}</td>
         <td>{{ customer.outstandingBills }}</td>
         <td>{{ customer.paymentDays }}</td>
         <td>{{ customer.limitType }}</td>
-        <td>{{ customer.nIK }}</td>
+        <td>{{ customer.nik }}</td>
         <td>{{ customer.displayMembership }}</td>
-        <td>{{ customer.membershipBarCode }}</td>
+        <td>{{ customer.membershipBarcode }}</td>
         <td>{{ customer.deliveryDays }}</td>
         <td>{{ customer.feesRokok }}</td>
         <td>{{ customer.feesNonRokok }}</td>
         <td>{{ customer.salesmanNIK }}</td>
+        <td>{{ customer.balance }}</td>
+        <td>{{ customer.pointReward }}</td>
+        <td>{{ customer.pic }}</td>
+        <td>{{ customer.phone }}</td>
+        <td>{{ customer.fax }}</td>
+        <td>{{ customer.mobile }}</td>
+        <td>{{ customer?.area?.description }}</td>
+        <td>{{ customer.addresses }}</td>
+        <td>{{ customer?.bpGroup?.description }}</td>
+        <td>{{ customer.creditLimit }}</td>
+        <td>{{ customer.isTaxCount }}</td>
+        <td>{{ customer.overallPointReward }}</td>
+        <td>{{ customer.latitude }}</td>
+        <td>{{ customer.longitude }}</td>
+        <td>{{ customer.accuracy }}</td>
+        <td>{{ customer.birthDate }}</td>
+        <td>{{ customer.transportType }}</td>
       </tr>
     </ng-template>
   </p-table>
