--- a/src/app/views/category/category.component.html
+++ b/src/app/views/category/category.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="card flex justify-content-center flex-column p-3">
   <h1>Category</h1>
 
   <div class="menu-list">
