--- a/src/app/views/category/category.component.html
+++ b/src/app/views/category/category.component.html
@@ -2,14 +2,16 @@
   <h1>Category</h1>
 
   <div class="menu-list">
-    <div class="flex flex-wrap">
-      <div class="justify-content-center my-2" *ngFor="let item of menus">
-        <app-card-menu
-          class="flex justify-content-center"
-          [icon]="item.icon"
-          [title]="item.title"
-          [desc]="item.description"
-          [redirectUri]="item.redirectUri" />
+    <div class="flex justify-content-center">
+      <div class="flex flex-wrap">
+        <div class="justify-content-center my-2" *ngFor="let item of menus">
+          <app-card-menu
+            class="flex justify-content-center"
+            [icon]="item.icon"
+            [title]="item.title"
+            [desc]="item.description"
+            [redirectUri]="item.redirectUri" />
+        </div>
       </div>
     </div>
   </div>
