--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -13,7 +13,7 @@
           [autofocus]="true" />
       </div>
       <div class="d-flex flex-column mb-3">
-        <label for="passwrod" class="font-bold block mb-2">Password</label>
+        <label for="password" class="font-bold block mb-2">Password</label>
         <input
           class="p-inputtext-sm"
           pPassword
