--- a/src/app/views/category/warehouse-bin/warehouse-bin.component.html
+++ b/src/app/views/category/warehouse-bin/warehouse-bin.component.html
@@ -1,89 +1,61 @@
-<div class="container-fluid">
+<div class="card flex justify-content-center flex-column p-3">
   <h1>Warehouse Bin</h1>
 
-  <p>Warehouse Bin Data from Subur Database</p>
+  <p>Warehouse Bin data from Subur Database</p>
 
-  <div class="d-flex flex-row align-items-center">
-    <mat-form-field>
-      <mat-label>Source Branch</mat-label>
-      <mat-select [(value)]="selectedBranch">
-        <mat-option>None</mat-option>
-        <mat-option value="item" *ngFor="let item of branchList">{{ item.value }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <mat-form-field class="ms-3">
-      <mat-label>Destination Branch</mat-label>
-      <mat-select [(value)]="branchDestination">
-        <mat-option>None</mat-option>
-        <mat-option value="item" *ngFor="let item of branchList">{{ item.value }}</mat-option>
-      </mat-select>
-    </mat-form-field>
-    <button
-      mat-raised-button
-      color="primary"
-      style="margin-bottom: 22px"
-      class="ms-3"
-      [disabled]="selectedBranch == null || branchDestination == null">
-      Submit
-    </button>
+  <div class="d-flex flex-row align-items-center mb-2">
+    <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
+    <p-toast></p-toast>
+    <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
+    <p-button label="Submit" (onClick)="confirmDialog()" [disabled]="buttonDisabled"></p-button>
   </div>
 
-  <mat-slide-toggle class="mb-4" [(ngModel)]="useCheckbox" (change)="onSlideChange()"
-    >Use Checkbox ?</mat-slide-toggle
-  >
+  <div class="d-flex flex-row align-items-center mb-2">
+    <p-inputSwitch
+      [(ngModel)]="useCheckbox"
+      (onChange)="checkBoxChange()"
+      ariaLabelledBy="chckbox"
+      class="d-flex"></p-inputSwitch>
+    <label class="ms-2" id="chckbox">Use Checkbox?</label>
+  </div>
 
-  <div class="mat-elevation-z3">
-    <table mat-table [dataSource]="dataSource">
-      <ng-container matColumnDef="select">
-        <th mat-header-cell *matHeaderCellDef style="width: 50px">
-          <mat-checkbox
-            (change)="$event ? toggleAllRows() : null"
-            [checked]="selectedData.hasValue() && isAllSelected()"
-            [indeterminate]="selectedData.hasValue() && !isAllSelected()">
-          </mat-checkbox>
+  <p-table
+    [loading]="loading"
+    [value]="dataSource"
+    [(selection)]="selectedData"
+    (onHeaderCheckboxToggle)="selectAllChange()"
+    (selectAllChange)="selectAllChange()"
+    (selectionChange)="selectChange()"
+    dataKey="code"
+    [paginator]="true"
+    [rows]="10"
+    [showCurrentPageReport]="true"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
+    <ng-template pTemplate="header">
+      <tr>
+        <th style="width: 4rem" *ngIf="useCheckbox">
+          <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
         </th>
-        <td mat-cell *matCellDef="let row">
-          <mat-checkbox
-            (click)="$event.stopPropagation()"
-            (change)="toggleRow($event, row)"
-            [checked]="selectedData.isSelected(row)">
-          </mat-checkbox>
+        <th>L1</th>
+        <th>L2</th>
+        <th>L3</th>
+        <th>Default</th>
+        <th>Warehouse</th>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="body" let-warehouseBin>
+      <tr>
+        <td *ngIf="useCheckbox">
+          <p-tableCheckbox [value]="warehouseBin"></p-tableCheckbox>
         </td>
-      </ng-container>
-
-      <ng-container matColumnDef="l1">
-        <th mat-header-cell *matHeaderCellDef>L1</th>
-        <td mat-cell *matCellDef="let element">{{ element.l1 }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="l2">
-        <th mat-header-cell *matHeaderCellDef>L2</th>
-        <td mat-cell *matCellDef="let element">{{ element.l2 }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="l3">
-        <th mat-header-cell *matHeaderCellDef>L3</th>
-        <td mat-cell *matCellDef="let element">{{ element.l3 }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="isDefault">
-        <th mat-header-cell *matHeaderCellDef>Is Default</th>
-        <td mat-cell *matCellDef="let element">{{ element.isDefault }}</td>
-      </ng-container>
-
-      <ng-container matColumnDef="warehouseModel">
-        <th mat-header-cell *matHeaderCellDef>Warehouse</th>
-        <td mat-cell *matCellDef="let element">{{ element.warehouseModel.branch.description }}</td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-    </table>
-
-    <mat-paginator
-      [pageSizeOptions]="[5, 10, 20]"
-      showFirstLastButtons
-      aria-label="Select page of periodic elements">
-    </mat-paginator>
-  </div>
+        <td>{{ warehouseBin.l1 }}</td>
+        <td>{{ warehouseBin.l2 }}</td>
+        <td>{{ warehouseBin.l3 }}</td>
+        <td>{{ warehouseBin.isDefault }}</td>
+        <td>{{ warehouseBin.warehouseModel }}</td>
+      </tr>
+    </ng-template>
+  </p-table>
 </div>
