--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
   <h1>Dashboard</h1>
 
-  <p>dashboard works!</p>
+  <p>Welcome to Subur Store Configuration, feel free to explore and customize.</p>
 </div>
