--- a/src/app/views/category/branch/branch.component.scss
+++ b/src/app/views/category/branch/branch.component.scss
@@ -1,9 +1,24 @@
+@import "../../../../styles.scss";
+
 h1 {
   font-weight: bold;
   padding-bottom: 10px;
   margin-bottom: 15px;
   border-bottom: 2px solid #bbb;
 }
+
 .card {
   background: white;
+}
+
+.search-icon-container {
+  background: $secondary-color;
+  border-top-left-radius: 5px;
+  border-bottom-left-radius: 5px;
+  color: white;
+}
+
+.search-input {
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
