--- a/src/app/views/category/item-group/item-group.component.html
+++ b/src/app/views/category/item-group/item-group.component.html
@@ -20,6 +20,7 @@
   </div>
 
   <p-table
+    #dt1
     [loading]="loading"
     [value]="dataSource"
     [(selection)]="selectedData"
@@ -32,7 +33,22 @@
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
+    [globalFilterFields]="['code', 'description', 'nominalPerpoint']"
     [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
+    <ng-template pTemplate="caption">
+      <div class="flex justify-content-end">
+        <span class="material-symbols-outlined flex align-items-center search-icon-container px-2">
+          search
+        </span>
+        <input
+          class="search-input"
+          pInputText
+          type="text"
+          [(ngModel)]="searchText"
+          (input)="dt1.filterGlobal(searchText, 'contains')"
+          placeholder="Search keyword" />
+      </div>
+    </ng-template>
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 4rem" *ngIf="useCheckbox">
@@ -43,14 +59,14 @@
         <th>Nominal Perpoint</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-bpGroup>
+    <ng-template pTemplate="body" let-itemGroup>
       <tr>
         <td *ngIf="useCheckbox">
-          <p-tableCheckbox [value]="bpGroup"></p-tableCheckbox>
+          <p-tableCheckbox [value]="itemGroup"></p-tableCheckbox>
         </td>
-        <td>{{ bpGroup.code }}</td>
-        <td>{{ bpGroup.description }}</td>
-        <td>{{ bpGroup.nominalPerpoint }}</td>
+        <td>{{ itemGroup.code }}</td>
+        <td>{{ itemGroup.description }}</td>
+        <td>{{ itemGroup.nominalPerpoint }}</td>
       </tr>
     </ng-template>
   </p-table>
