--- a/src/app/views/category/manufacturer/manufacturer.component.html
+++ b/src/app/views/category/manufacturer/manufacturer.component.html
@@ -20,6 +20,7 @@
   </div>
 
   <p-table
+    #dt1
     [loading]="loading"
     [value]="dataSource"
     [(selection)]="selectedData"
@@ -31,8 +32,23 @@
     [rows]="10"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
+    [globalFilterFields]="['description']"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
+    <ng-template pTemplate="caption">
+      <div class="flex justify-content-end">
+        <span class="material-symbols-outlined flex align-items-center search-icon-container px-2">
+          search
+        </span>
+        <input
+          class="search-input"
+          pInputText
+          type="text"
+          [(ngModel)]="searchText"
+          (input)="dt1.filterGlobal(searchText, 'contains')"
+          placeholder="Search keyword" />
+      </div>
+    </ng-template>
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 4rem" *ngIf="useCheckbox">
@@ -41,12 +57,12 @@
         <th>Description</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-bpGroup>
+    <ng-template pTemplate="body" let-manufacturer>
       <tr>
         <td *ngIf="useCheckbox">
-          <p-tableCheckbox [value]="bpGroup"></p-tableCheckbox>
+          <p-tableCheckbox [value]="manufacturer"></p-tableCheckbox>
         </td>
-        <td>{{ bpGroup.description }}</td>
+        <td>{{ manufacturer.description }}</td>
       </tr>
     </ng-template>
   </p-table>
