--- a/src/app/views/category/product/product.component.html
+++ b/src/app/views/category/product/product.component.html
@@ -36,6 +36,7 @@
     <p-progressBar [value]="progressValue"></p-progressBar>
   </div>
   <p-table
+    #dt1
     [loading]="loading"
     [value]="dataSource"
     [(selection)]="selectedData"
@@ -50,7 +51,46 @@
     [totalRecords]="totalRecords"
     [(rows)]="pageSize"
     (onPage)="onPageSizeChange($event)"
-    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
+    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]"
+    [globalFilterFields]="[
+      'code',
+      'name',
+      'manufacturer.description',
+      'isTaxCount',
+      'brand',
+      'itemGroup1',
+      'itemGroup2',
+      'isInactive',
+      'isInOpname',
+      'barcode',
+      'barcode2',
+      'barcode3',
+      'barcode4',
+      'nominalPoint',
+      'isCalculatePrice',
+      'isForSalesmanWeb',
+      'isForB2C',
+      'isInventoryItem',
+      'isSalesItem',
+      'isPurchaseItem',
+      'basePrice',
+      'itemGroupModel.description',
+      'uoMGroupModel.description'
+    ]">
+    <ng-template pTemplate="caption">
+      <div class="flex justify-content-end">
+        <span class="material-symbols-outlined flex align-items-center search-icon-container px-2">
+          search
+        </span>
+        <input
+          class="search-input"
+          pInputText
+          type="text"
+          [(ngModel)]="searchText"
+          (input)="dt1.filterGlobal(searchText, 'contains')"
+          placeholder="Search keyword" />
+      </div>
+    </ng-template>
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 4rem" *ngIf="useCheckbox">
