--- a/src/app/views/category/role-menu/role-menu.component.html
+++ b/src/app/views/category/role-menu/role-menu.component.html
@@ -36,6 +36,7 @@
     <p-progressBar [value]="progressValue"></p-progressBar>
   </div>
   <p-table
+    #dt1
     [loading]="loading"
     [value]="dataSource"
     [(selection)]="selectedData"
@@ -50,23 +51,38 @@
     [totalRecords]="totalRecords"
     [(rows)]="pageSize"
     (onPage)="onPageSizeChange($event)"
-    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
+    [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]"
+    [globalFilterFields]="['role.name', 'menu.description']">
+    <ng-template pTemplate="caption">
+      <div class="flex justify-content-end">
+        <span class="material-symbols-outlined flex align-items-center search-icon-container px-2">
+          search
+        </span>
+        <input
+          class="search-input"
+          pInputText
+          type="text"
+          [(ngModel)]="searchText"
+          (input)="dt1.filterGlobal(searchText, 'contains')"
+          placeholder="Search keyword" />
+      </div>
+    </ng-template>
     <ng-template pTemplate="header">
       <tr>
         <th style="width: 4rem" *ngIf="useCheckbox">
           <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
         </th>
-        <th>Code</th>
-        <th>Name</th>
+        <th>Role</th>
+        <th>Menu</th>
       </tr>
     </ng-template>
-    <ng-template pTemplate="body" let-customer>
+    <ng-template pTemplate="body" let-roleMenu>
       <tr>
         <td *ngIf="useCheckbox">
-          <p-tableCheckbox [value]="customer"></p-tableCheckbox>
+          <p-tableCheckbox [value]="roleMenu"></p-tableCheckbox>
         </td>
-        <td>{{ customer.role.name }}</td>
-        <td>{{ customer.menu.description }}</td>
+        <td>{{ roleMenu.role.name }}</td>
+        <td>{{ roleMenu.menu.description }}</td>
       </tr>
     </ng-template>
   </p-table>
