--- a/src/app/views/category/journal-account/journal-account.component.html
+++ b/src/app/views/category/journal-account/journal-account.component.html
@@ -5,9 +5,26 @@
 
   <div class="d-flex flex-row align-items-center mb-2">
     <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
+    <p-dropdown
+      (onChange)="branchChange()"
+      class="me-2"
+      [options]="branchData"
+      [(ngModel)]="selectedBranch"
+      optionLabel="description"
+      [showClear]="true"
+      placeholder="Destination Branch"></p-dropdown>
     <p-toast></p-toast>
     <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
     <p-button label="Submit" (onClick)="confirmDialog()" [disabled]="buttonDisabled"></p-button>
+  </div>
+
+  <div class="d-flex flex-row align-items-center mb-2">
+    <p-inputSwitch
+      [(ngModel)]="useCheckbox"
+      (onChange)="checkBoxChange()"
+      ariaLabelledBy="chckbox"
+      class="d-flex"></p-inputSwitch>
+    <label class="ms-2" id="chckbox">Use Checkbox?</label>
   </div>
 
   <p-table
@@ -47,7 +64,6 @@
         </th>
         <th>Account Code</th>
         <th>Description</th>
-        <th>Branch</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-journalAccount>
@@ -57,7 +73,6 @@
         </td>
         <td>{{ journalAccount.accountCode }}</td>
         <td>{{ journalAccount.accountName }}</td>
-        <td>{{ journalAccount.branch.description }}</td>
       </tr>
     </ng-template>
   </p-table>
