--- a/src/app/views/category/menu/menu.component.html
+++ b/src/app/views/category/menu/menu.component.html
@@ -46,8 +46,7 @@
       'menuOrder',
       'isActive',
       'formName',
-      'formCaption',
-      'branch.description'
+      'formCaption'
     ]"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
@@ -76,7 +75,6 @@
         <th>Active</th>
         <th>Form Name</th>
         <th>Form Caption</th>
-        <th>Branch</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-menu>
@@ -90,7 +88,6 @@
         <td>{{ menu.isActive }}</td>
         <td>{{ menu.formName }}</td>
         <td>{{ menu.formCaption }}</td>
-        <td>{{ menu.branch?.description }}</td>
       </tr>
     </ng-template>
   </p-table>
