--- a/src/app/views/category/warehouse-bin/warehouse-bin.component.html
+++ b/src/app/views/category/warehouse-bin/warehouse-bin.component.html
@@ -70,7 +70,7 @@
         <td>{{ warehouseBin.l2 }}</td>
         <td>{{ warehouseBin.l3 }}</td>
         <td>{{ warehouseBin.isDefault }}</td>
-        <td>{{ warehouseBin.warehouseModel }}</td>
+        <td>{{ warehouseBin.warehouseModel?.description }}</td>
       </tr>
     </ng-template>
   </p-table>
