--- a/src/app/views/category/warehouse/warehouse.component.html
+++ b/src/app/views/category/warehouse/warehouse.component.html
@@ -5,6 +5,14 @@
 
   <div class="d-flex flex-row align-items-center mb-2">
     <p-button label="Load Data" (onClick)="loadData()" severity="success" class="me-2"></p-button>
+    <p-dropdown
+      (onChange)="branchChange()"
+      class="me-2"
+      [options]="branchData"
+      [(ngModel)]="selectedBranch"
+      optionLabel="description"
+      [showClear]="true"
+      placeholder="Destination Branch"></p-dropdown>
     <p-toast></p-toast>
     <p-confirmDialog header="Confirmation" icon="pi pi-exclamation-triangle"></p-confirmDialog>
     <p-button label="Submit" (onClick)="confirmDialog()" [disabled]="buttonDisabled"></p-button>
@@ -54,7 +62,7 @@
         <th style="width: 4rem" *ngIf="useCheckbox">
           <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
         </th>
-        <th>Branch</th>
+        <th>Description</th>
         <th>Default Bin</th>
         <th>Vendor Location</th>
       </tr>
@@ -64,7 +72,7 @@
         <td *ngIf="useCheckbox">
           <p-tableCheckbox [value]="warehouse"></p-tableCheckbox>
         </td>
-        <td>{{ warehouse.branch?.description }}</td>
+        <td>{{ warehouse.description }}</td>
         <td>{{ warehouse.defaultBin?.isDefault }}</td>
         <td>{{ warehouse.isVendorLocation }}</td>
       </tr>
