--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,5 +1,5 @@
 <div class="login-container">
-  <div class="card d-flex flex-column justify-content-center p-4">
+  <div class="card d-flex flex-column justify-content-center p-4 shadow-3">
     <h1 style="text-align: center" class="mb-3">Login</h1>
     <div class="d-flex flex-column">
       <div class="d-flex flex-column mb-3">
