--- a/src/app/views/category/role-menu/role-menu.component.html
+++ b/src/app/views/category/role-menu/role-menu.component.html
@@ -43,7 +43,7 @@
     (selectAllChange)="selectAllChange($event)"
     (selectionChange)="selectChange()"
     [selectAll]="checkAll"
-    dataKey="code"
+    dataKey="alias"
     [paginator]="true"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
