--- a/src/app/views/category/journal-account/journal-account.component.html
+++ b/src/app/views/category/journal-account/journal-account.component.html
@@ -35,12 +35,12 @@
     (onHeaderCheckboxToggle)="selectAllChange()"
     (selectAllChange)="selectAllChange()"
     (selectionChange)="selectChange()"
-    dataKey="code"
+    dataKey="accountCode"
     [paginator]="true"
     [rows]="10"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
-    [globalFilterFields]="['code', 'description', 'nominalPerpoint']"
+    [globalFilterFields]="['accountCode', 'accountName', 'discriminator']"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
     <ng-template pTemplate="caption">
@@ -64,6 +64,7 @@
         </th>
         <th>Account Code</th>
         <th>Description</th>
+        <th>Discriminator</th>
       </tr>
     </ng-template>
     <ng-template pTemplate="body" let-journalAccount>
@@ -73,6 +74,7 @@
         </td>
         <td>{{ journalAccount.accountCode }}</td>
         <td>{{ journalAccount.accountName }}</td>
+        <td>{{ journalAccount.discriminator }}</td>
       </tr>
     </ng-template>
   </p-table>
