--- a/src/app/views/category/price/price.component.html
+++ b/src/app/views/category/price/price.component.html
@@ -40,13 +40,16 @@
     [loading]="loading"
     [value]="dataSource"
     [(selection)]="selectedData"
-    (selectAllChange)="selectAllChange($event)"
+    (selectAllChange)="selectAllChange()"
     (selectionChange)="selectChange()"
-    [selectAll]="checkAll"
-    dataKey="code"
+    dataKey="name"
     [paginator]="true"
+    [rows]="10"
     [showCurrentPageReport]="true"
     [tableStyle]="{ 'min-width': '50rem' }"
+    [totalRecords]="totalRecords"
+    [(rows)]="pageSize"
+    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [globalFilterFields]="[
       'name',
       'averagePrice',
@@ -56,10 +59,6 @@
       'productModel.brand',
       'isActive'
     ]"
-    currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
-    [totalRecords]="totalRecords"
-    [(rows)]="pageSize"
-    (onPage)="onPageSizeChange($event)"
     [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]">
     <ng-template pTemplate="caption">
       <div class="flex justify-content-end">
