--- a/src/app/views/category/role/role.component.html
+++ b/src/app/views/category/role/role.component.html
@@ -27,7 +27,7 @@
     (onHeaderCheckboxToggle)="selectAllChange()"
     (selectAllChange)="selectAllChange()"
     (selectionChange)="selectChange()"
-    dataKey="code"
+    dataKey="name"
     [paginator]="true"
     [rows]="10"
     [showCurrentPageReport]="true"
