--- a/src/app/views/category/warehouse-bin/warehouse-bin.component.html
+++ b/src/app/views/category/warehouse-bin/warehouse-bin.component.html
@@ -34,7 +34,7 @@
     [tableStyle]="{ 'min-width': '50rem' }"
     currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries"
     [rowsPerPageOptions]="[10, 20, 30, 50, 80, 100]"
-    [globalFilterFields]="['l1', 'l2', 'l2', 'l3', 'isDefault']">
+    [globalFilterFields]="['l1', 'l2', 'l2', 'l3', 'isDefault', 'warehouseModel.description']">
     <ng-template pTemplate="caption">
       <div class="flex justify-content-end">
         <span class="material-symbols-outlined flex align-items-center search-icon-container px-2">
